--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>blogpost</title>
 </head>
@@ -23,7 +23,7 @@ Consider using material palette for your colors
             <br>
         <div class="main">
             <div class="container-main container1">
-                <div class="container-title">Music</div>
+                <div class="container-title">Guitar, Piano, Earphones. What do they have in common?</div>
                 <img src="img/music.jpg" alt="music">  
                     <div class="container-text">
                        Bacon ipsum dolor amet kevin pancetta excepteur, sed consequat cupidatat picanha meatloaf chicken. Tempor flank frankfurter sirloin ham, chislic doner enim occaecat eu. Sirloin aute meatloaf velit. Cupim ground round andouille, ut chuck elit id ad kielbasa nisi occaecat veniam buffalo ut minim. Leberkas deserunt magna kevin velit ad swine hamburger quis brisket. Excepteur short loin prosciutto flank jowl in.
@@ -32,7 +32,7 @@ Consider using material palette for your colors
             </div>
 
             <div class="container-main container2">
-                <div class="container-title">Mango</div> 
+                <div class="container-title">A Secret Recipe: Mango</div> 
                 <img src="img/mango.jpg"> 
                     <div class="container-text">
                        Bacon ipsum dolor amet kevin pancetta excepteur, sed consequat cupidatat picanha meatloaf chicken. Tempor flank frankfurter sirloin ham, chislic doner enim occaecat eu. Sirloin aute meatloaf velit. Cupim ground round andouille, ut chuck elit id ad kielbasa nisi occaecat veniam buffalo ut minim. Leberkas deserunt magna kevin velit ad swine hamburger quis brisket. Excepteur short loin prosciutto flank jowl in.
@@ -41,7 +41,7 @@ Consider using material palette for your colors
             </div>
   
             <div class="container-main">
-                <div class="container-title">Aurora</div>  
+                <div class="container-title">Places with Nice Scenery</div>  
                 <img src="img/aurora.jpg">
                     <div class="container-text">
                        Bacon ipsum dolor amet kevin pancetta excepteur, sed consequat cupidatat picanha meatloaf chicken. Tempor flank frankfurter sirloin ham, chislic doner enim occaecat eu. Sirloin aute meatloaf velit. Cupim ground round andouille, ut chuck elit id ad kielbasa nisi occaecat veniam buffalo ut minim. Leberkas deserunt magna kevin velit ad swine hamburger quis brisket. Excepteur short loin prosciutto flank jowl in.
