--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@ need to work). Your project MUST
 
 Consider using material palette for your colors
     -->
+
+    <div class="heading">
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">about</a></li>
+        </ul>
+    </div>
+
     <div class="container">
         <div class="title">Blogpost</div>
             <br>
@@ -33,7 +42,7 @@ Consider using material palette for your colors
 
             <div class="container-main container2">
                 <div class="container-title">A Secret Recipe: Mango</div> 
-                <img src="img/mango.jpg"> 
+                <img src="img/mango.jpg" alt="mango"> 
                     <div class="container-text">
                        Bacon ipsum dolor amet kevin pancetta excepteur, sed consequat cupidatat picanha meatloaf chicken. Tempor flank frankfurter sirloin ham, chislic doner enim occaecat eu. Sirloin aute meatloaf velit. Cupim ground round andouille, ut chuck elit id ad kielbasa nisi occaecat veniam buffalo ut minim. Leberkas deserunt magna kevin velit ad swine hamburger quis brisket. Excepteur short loin prosciutto flank jowl in.
                    </div>
@@ -42,7 +51,7 @@ Consider using material palette for your colors
   
             <div class="container-main">
                 <div class="container-title">Places with Nice Scenery</div>  
-                <img src="img/aurora.jpg">
+                <img src="img/aurora.jpg" alt="aurora">
                     <div class="container-text">
                        Bacon ipsum dolor amet kevin pancetta excepteur, sed consequat cupidatat picanha meatloaf chicken. Tempor flank frankfurter sirloin ham, chislic doner enim occaecat eu. Sirloin aute meatloaf velit. Cupim ground round andouille, ut chuck elit id ad kielbasa nisi occaecat veniam buffalo ut minim. Leberkas deserunt magna kevin velit ad swine hamburger quis brisket. Excepteur short loin prosciutto flank jowl in.
                    </div>
