--- a/index.html
+++ b/index.html
@@ -20,11 +20,21 @@ Consider using material palette for your colors
     -->
 
     <div class="heading">
-        <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">blog</a></li>
-            <li><a href="#">about</a></li>
-        </ul>
+        <div class="heading-sub">
+        <div class="li one">
+            <a href="#">home</a>
+        </div>
+    </div>
+    <div class="heading-sub">
+        <div class="li two">
+            <a href="#">blog</a>
+        </div>
+        </div>
+        <div class="heading-sub">
+        <div class="li three">
+            <a href="#">about</a>
+        </div>
+        </div>
     </div>
 
     <div class="container">
