--- a/index.html
+++ b/index.html
@@ -7,39 +7,26 @@
     <title>blogpost</title>
 </head>
 <body>
-    <!-- You will be creating a simple 3 post blogpost website. Each post should
-contain a title, image, preview text and a “link” to the post (Link does not
-need to work). Your project MUST
--Utilize multiple SCSS files
--Utilize SCSS variables for colors and font
--Centered and aligned posts using flexbox
--Custom google font
--Utilize best practices for sizing elements including VH,VW, REM
-
-Consider using material palette for your colors
-    -->
-
     <div class="heading">
         <div class="heading-sub">
-        <div class="li one">
-            <a href="#">home</a>
-        </div>
-    </div>
-    <div class="heading-sub">
-        <div class="li two">
-            <a href="#">blog</a>
-        </div>
+            <div class="li one">
+                <a href="#">home</a>
+            </div>
         </div>
         <div class="heading-sub">
-        <div class="li three">
-            <a href="#">about</a>
+            <div class="li two">
+                <a href="#">blog</a>
+            </div>
         </div>
+        <div class="heading-sub">
+            <div class="li three">
+                <a href="#">about</a>
+            </div>
         </div>
     </div>
 
     <div class="container">
         <div class="title">Blogpost</div>
-            <br>
         <div class="main">
             <div class="container-main container1">
                 <div class="container-title">Guitar, Piano, Earphones. What do they have in common?</div>
@@ -59,7 +46,7 @@ Consider using material palette for your colors
                         <a href="">Read More</a>
             </div>
   
-            <div class="container-main">
+            <div class="container-main container3">
                 <div class="container-title">Places with Nice Scenery</div>  
                 <img src="img/aurora.jpg" alt="aurora">
                     <div class="container-text">
